wp-content/themes/zenit-theme/assets/styles/layouts/_nav.scss
.nav-primary{
	position: fixed;
	top: 0;
	left: 0;
	background-image: url('../images/stardust_white.png');
	background-size: contain;
	z-index: 99;
    height: 88px;
	width: 100vw;
	padding: 30px 40px 0 40px;
	transition: 0.5s background ease-in-out, 0.5s padding ease-in-out, 0.5s height ease-in-out;

	li{
		display:inline-block;
		margin-right:20px;
        vertical-align: top;
		
		a{
			color:black;
			font-family:'sucrose';
			font-weight:bold;
			font-size:16px;
			text-transform: uppercase;
			letter-spacing:0.125em;
			padding:0;

			&:focus{
				background-color:transparent;
				text-decoration:none;
			}	
		}

		&:last-of-type{
			margin-right:0;
		}
	}

	#logo{
		position:absolute;
		left:50%;
		top:50%;
		transform:translate(-50%,-50%);
		width:160px;
		max-width:160px;
		margin-top:3px;
		transition:0.5s all ease-in;

		svg{
			fill:black;
			width:160px;
			max-width:160px;
			height:auto;
			transition:0.5s all ease-in;
		}
	}

	.nav{
		float:left;
		margin-top:3px;

        > li {
            padding-bottom: 33px;
            position: initial;
        }
	}

    .menu-second-level {
        > .sub-menu {
            background: #fff;
            display: none;
            position: absolute;
            left: 0;
            padding: 20px 40px;
            top: 88px;
            transition: 0.5s top ease-in-out;
            width: 100%;

            > li {
                margin-left: 20px;
                margin-right: 0;
                width: 265px;

                > a {
                    font-size: 20px;
                }

                &:first-child {
                    margin-left: 0;
                }
            }
        }
    }

    .menu-third-level {
        > .sub-menu {
            padding-top: 15px;

            > li {
                display: block;
                margin-bottom: 5px;

                > a {
                    font-size: 14px;
                }
            }
        }
    }

	.transactionnal{
		float:right;

        > ul {
            margin-top: 3px;
        }


        .currency-changer {
            -webkit-transform: translateY(0px);
            transform: translateY(0px);

            .dd-container,
            .dd-select {
                width: 75px !important;
            }

            a.dd-option {
                font-size: 14px;
            }
        }

        .shopping-cart {
            position: relative;
            top: -3px;
        }
	}

    .menu-menu-secondaire-container {
        float: right;
        margin-right: 40px;
    }

    #menu-menu-secondaire {
        margin-top: 3px;

        a {
            display: block;
        }
    }

	#btMenu{
		width:25px;
		display:block;
		display:none;
		cursor: pointer;
		position:absolute;
		right: 25px;
    	top: 27px;

    	span{
    		width:100%;
    		height:3px;
    		background-color:black;
    		display:block;
    		transition:0.5s all ease-in-out;
    		opacity:1;
    		top:0;
    		margin-bottom:5px;
    		transform-origin:center center;
    		position:relative;
    		transform:rotate(0deg);

    		&:last-of-type{
    			margin-bottom:0;
    		}
    	}
	}

	&.fixed{
        height: 73px;
		padding: 25px 40px;

		#btMenu{
			span{
				background-color:black;
			}
		}

		#logo{
			max-width:130px;
			width:130px;

			svg{
				max-width:130px;
				width:130px;
			}
		}
	}

    .language-chooser > li {
        display: inline;
        margin-right: 0;

        a {
            display: block;
        }
    }

    label {
        margin-bottom: 0;
    }
}


@media (max-width: 1330px) {
    .nav-primary {
        .menu-second-level {
            > .sub-menu > li {
                width: 20%;
                margin-left: 2%;

                > a {
                    font-size: 18px;
                }
            }
        }
    }
}

@media (max-width: 1048px) {
    .nav-primary {
        li {
            a {
                font-size: 13px;
            }
        }

        .menu-second-level {
            > .sub-menu > li {
                width: 23%;
            }
        }
    }
}

@media (max-width: 980px) {
    .nav-primary{
    	#logo{
    		left:30px;
    		transform:translateY(-50%);
    	}

        #menu-menu-principal {
            margin-left: 175px;
        }

        .menu-menu-secondaire-container {
            margin-right: 25px;
        }

        li {
            margin-right: 15px;
        }

        .currency-changer {
            margin-right: 0;
        }

        .menu-second-level {
            > .sub-menu > li {
                margin-left: 1%;

                > a {
                    font-size: 17px;
                }
            }
        }

        .menu-third-level {
            > .sub-menu > li > a {
                font-size: 13px;
            }
        }
    }
}

@media (max-width: 858px) {
    .nav-primary{
        height: 88px;

    	#logo{
    		left:50%;
    		transform:translate(-50%,-50%);
    	}

        #menu-menu-principal {
            margin-left: 0;
        }

    	.nav{
    		position: fixed;
		    top: -3px;
		    left:-205%;
		    background-image:url('../images/stardust_white.png');
			background-size: contain;
		    width: 100vw;
		    height: 100vh;
		    margin-left: 0;
		    z-index: 999;
		    padding:40px;
		    transition:0.5s left ease-in-out;

            > li {
                padding-bottom: 0;
            }
    	}

    	li{
    		display: block;
            margin-bottom: 5px;

    		a{
    			font-size: 22px;
    		}
    	}

    	.transactionnal{
    		z-index: 999;
    		position: fixed;
		    bottom: 50px;
		    opacity: 0;
		    transition: opacity 1s;

            .currency-changer {
                .dd-container,
                .dd-select,
                .dd-options {
                    width: 113px !important;
                }

                .dd-options {
                    right: -85px;
                    top: 0px;
                    border-top: solid 1px #ccc;
                }

                a.dd-option {
                    padding: 0 10px;
                    font-size: 22px;
                }
            }

            .shopping-cart {
                position: relative;
                top: inherit;
            }

            .cart-icon {
                filter: invert(0) !important;
            }
    	}

        .menu-menu-secondaire-container {
            z-index: 999;
            position: fixed;
            bottom: 155px;
            opacity: 0;
            transition: opacity 1s;
        }

    	&.visually-visible{
    		.nav{
    			left:0;
    		}

    		.transactionnal{
    			opacity:1;
    		}

    		li a{
    			color:black!important;
    		}

            .menu-menu-secondaire-container {
                opacity: 1;
            }

    		#btMenu{
    			span{
	    			background-color:black!important;

	    			&:nth-child(1){
	    				transform:rotate(45deg);
	    				top:8px;
	    			}

	    			&:nth-child(2){
	    				opacity:0;
	    				transform:translateX(5px);
	    			}

	    			&:nth-child(3){
	    				transform:rotate(-45deg);
	    				top:-8px;
	    			}
	    		}
    		}
    	}

    	#btMenu{
    		display:block;
    		z-index:9999;
			top:25px;
    	}

        li.menu-second-level {
            position: relative;

            > a {
                &:before {
                    content: "+";
                    font-size: 36px;
                    position: absolute;
                    left: -28px;
                    top: -11px;
                    font-weight: 400!important;
                    font-family: 'apercu', Arial, Helvetica, sans-serif;
                }

                &.opened {
                    &:before {
                        content: "-";
                    }
                }
            }

            > .sub-menu {
                background: none;
                display: none;
                padding: 20px 0 20px 25px;
                position: initial;
                left: auto;
                top: auto;

                > li {
                    margin-left: 0;
                    position: relative;
                    width: 100%;
                }
            }
        }

        li.menu-third-level {
            &:before {
                content: "+";
                font-size: 32px;
                position: absolute;
                left: -26px;
                top: -10px;
            }

            &.opened {
                &:before {
                    content: "-";
                }
            }

            > .sub-menu {
                display: none;
                padding: 15px 0 15px 20px;
            }
        }
    }

    .fixed-menu {
        .nav-primary {
            .menu-second-level {
                > .sub-menu {
                    top: auto;
                }
            }
        }
    }
}

